BB-6003: FrontStore > Catalog > It appears horizontal scrolling in grid - fixed horizontal scroll on no-image view catalog

--- a/src/Oro/Bundle/FrontendBundle/Resources/public/default/scss/_legacy/products-widget.scss
+++ b/src/Oro/Bundle/FrontendBundle/Resources/public/default/scss/_legacy/products-widget.scss
@@ -341,7 +341,11 @@
         width: calc(35% - 10px);
 
         + .product-item__secondary-half_no-image-view {
-          width: 100%;
+          width: 65%;
+
+          @media (max-width: $screen-sm) {
+            width: 100%;
+          }
         }
         
         .product-item--compact & {
